# container-inspector

./: .bumpversion.cfg  .gitattributes  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  NOTICE  NOTICE.txt  README-chef.md  README.md  README.rst  azure-pipelines.yml  conan.ABOUT  configure  configure.bat  container-inspector.ABOUT  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
docs/references/: docker_image_spec_v1.1.md.ABOUT  docker_image_spec_v1.2.md  docker_image_spec_v1.md.ABOUT
docs/source/: conf.py
etc/ci/: azure-win.yml
fedora/: fedora-17.txt  fedora-22-server.txt  fedora-23-server.txt  fedora-26.txt  fedora-27.txt  fedora-28-server.txt  fedora-29.txt  fedora-30-container.txt  fedora-32-container.txt  fedora-32.txt  fedora-34-matecompiz.txt  fedora-34.txt
misc/docker/: download-docker-image.sh  download-docker-image.sh.ABOUT
misc/docker_image/: docker_image.py.ABOUT
misc/references/: docker_image_spec_v1.1.md  docker_image_spec_v1.2.md.ABOUT  docker_image_spec_v1.md  docker_image_spec_v1.md.ABOUT
opensuse/: opensuse-13.2.txt
redhat/: rhel8_1.txt
scientificlinux/: scientific-7.5.txt  scientific-7.6.txt  scientific-7.7.txt
src/conan/: __init__.py  cli.py  distro.py  docker.py  docker_dyn.py  dockerfile.py  image.py  image_v10.py  image_v11.py  installed_rpms.py  packages.py  rootfs.py  utils.py
src/conan/fetch/: __init__.py
src/container_inspector/: __init__.py  cli.py  distro.py  dockerfile.py  image.py  rootfs.py  utils.py
src/container_inspector/fetch/: __init__.py  docker_image.py
tests/: test_cli.py  test_distro.py  test_docker.py  test_docker2.py  test_dockerfile.py  test_image.py  test_image_v10.py  test_image_v11.py  test_rootfs.py  test_utils.py  utilities.py
tests/data/cli/: hello-world.tar-inventory-from-dir-expected.json  hello-world.tar-inventory-from-tarball-expected.json  she-image_from_scratch-1.0.tar-inventory-from-tarball-expected.json
tests/data/distro/: README-nate.md  mit.LICENSE  os-release-chef.ABOUT  os-release-nate.ABOUT  os-release-zoo.ABOUT  os_release.ABOUT
tests/data/distro/amazon/: amzon-2016.09.txt
tests/data/distro/chef-os-release/: os_release.ABOUT
tests/data/distro/chef-os-release/expected/: alpine_3_8-expected.json  amazon_2-expected.json  amazon_2018-expected.json  arch-expected.json  archarm-expected.json  (+20 more)
tests/data/distro/chef-os-release/expected-distro/: alpine_3_8-expected.json  amazon_2-expected.json  amazon_2018-expected.json  antergos-expected.json  archarm-expected.json  centos_7-expected.json  clearlinux_1-expected.json  clearos_7-expected.json  elementary_5-expected.json  fedora_28-expected.json  gentoo-expected.json  kali_2018_4-expected.json  linuxmint_18_2-expected.json  mangeia_6-expected.json  manjaro-expected.json  nixos-expected.json  opensuseleap_15_0-expected.json  oracle_7-expected.json  raspbian_10-expected.json  redhat_8-expected.json  scientific_7-expected.json  slackware_14_2-expected.json  sled_15-expected.json  sles_11_4-expected.json  sles_12_3-expected.json  sles_15_1-expected.json  sles_sap_12_2-expected.json  ubuntu_1404-expected.json  ubuntu_1604-expected.json  ubuntu_1804-expected.json  xcp_7_5_0-expected.json
tests/data/distro/coreos/: coreos-1235.6.0.txt
tests/data/distro/debian/: debian-sid.txt
tests/data/distro/fedora/: fedora-24-server.txt  fedora-25.txt  fedora-27-workstation.txt  fedora-29-server.txt  fedora-31-container.txt  fedora-31-server.txt  fedora-31.txt  fedora-32-server.txt  fedora-33-cinnamon.txt  fedora-33-kde.txt  fedora-33-matecompiz.txt  fedora-33-workstation.txt  fedora-33.txt  fedora-34-kde.txt  fedora-34-server.txt
tests/data/distro/opensuse/: opensuse-2015.txt
tests/data/distro/raspbian/: raspbian-10.txt
tests/data/distro/redhat/: rhel7_6.txt
tests/data/distro/slackware/: slackware-14.1
tests/data/distro/ubuntu/: ubuntu-14.04  ubuntu-17.04.txt  ubuntu-disco.txt  ubuntu-raring.txt  ubuntu-wily.txt
tests/data/docker/: busybox.tgz  busybox_no_repo.tgz
tests/data/docker/v10_format/: busybox2.tgz  images.tgz  merge.tgz
tests/data/docker/v11_format/: imagesv11.tar
tests/data/image/: mini-image_from_scratch-2.0.tar  mini-image_from_scratch-2.0.tar-relative-expected.json  she-image_from_scratch-1.0.tar  windows-mini-image.tar.gz.expected.json
tests/data/image_templates/: Dockerfile.from_tar  Dockerfile.scratch  README.rst  layer.tar
tests/data/repos/: hello-world.tar.flatten.expected.json  hello-world.tar.registry.expected.json  images.tar.gz.expected.json  imagesv11.tar.expected.json  imagesv11.tar.registry.expected.json  imagesv11_with_tar_at_root.tar  imagesv11_with_tar_at_root.tar.expected.json  imagesv11_with_tar_at_root.tar.registry.expected.json
tests/data/rootfs/: hello-world.tar
tests/data/utils/: colon.tar.xz  layer_with_links.tar  layer_with_links.tar.expected-skipping.json  layer_with_links.tar.expected.json  layer_with_links_missing_targets.tar.expected-broken.json  layer_with_links_missing_targets.tar.expected.json  tar_relative-with-whiteouts.tar
ubuntu/: ubuntu-21.10.txt  ubuntu-artful.txt  ubuntu-groovy.txt  ubuntu-hirsute.txt  ubuntu-impish.txt  ubuntu-utopic.txt  ubuntu-vivid.txt  ubuntu-yakkety.txt
(+386 files in other folders)
