[metadata]
license_files = 
    apache-2.0.LICENSE
    NOTICE
    README.rst
    CHANGELOG.rst

[aliases]
release = register clean --all sdist bdist_wheel upload

[tool:flake8]
max-line-length = 140
exclude = tests/*

[tool:pytest]
norecursedirs =
    .git
    .tox
    dist
    build
    thirdparty
    local
    ci
    docs
    etc
    Include
    include
    Lib
    lib
    bin
    Scripts
    tmp
    .cache
    data
    src/data
    tests/data

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfEsxX
    --strict-markers
    -s
    -vv
    --ignore docs/conf.py
    --ignore setup.py
    --doctest-modules

[isort]
force_single_line=True
line_length=120
known_first_party=licensedcode
default_section=THIRDPARTY
forced_separate=test_licensedcode

[matrix]
# This is the configuration for the `./bootstrap.py` script.
# It generates `.travis.yml`, `tox.ini` and `appveyor.yml`.
#
# Syntax: [alias:] value [!variable[glob]] [&variable[glob]]
#
# alias:
#  - is used to generate the tox environment
#  - it's optional
#  - if not present the alias will be computed from the `value`
# value:
#  - a value of "-" means empty
# !variable[glob]:
#  - exclude the combination of the current `value` with
#    any value matching the `glob` in `variable`
#  - can use as many you want
# &variable[glob]:
#  - only include the combination of the current `value`
#    when there's a value matching `glob` in `variable`
#  - can use as many you want

python_versions =
    3.6
    pypy

dependencies =
    -

coverage_flags =
    : true
    nocover: false

environment_variables =
    -
