[metadata]
license_files = 
    apache-2.0.LICENSE
    NOTICE
    README.rst
    CHANGELOG.rst
name = container-inspector
author = nexB. Inc. and others
author_email = info@aboutcode.org
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = Docker, containers, rootfs and virtual machinesrelated utilities.
long_description = file:README.rst
url = https://github.com/nexB/container-inspector
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords = 
    utilities

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false
setup_requires = setuptools_scm[toml] >= 4

install_requires =
    click
    attrs
    dockerfile_parse

python_requires= >=3.6

[options.entry_points]
console_scripts =
    container_inspector=container_inspector.cli:container_inspector
    container_inspector_squash=container_inspector.cli:container_inspector_squash
    container_inspector_dockerfile=container_inspector.cli:container_inspector_dockerfile

[options.packages.find]
where=src

[options.extras_require]
testing =
    # upstream
    pytest >= 6
    pytest-xdist >= 2
docs=
    Sphinx>=3.3.1
    sphinx-rtd-theme>=0.5.0
    doc8>=0.8.1


[aliases]
release = register clean --all sdist bdist_wheel