[metadata]
name = container-inspector
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = Docker, containers, rootfs and virtual machine related software composition analysis (SCA) utilities.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/container-inspector

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities
    docker
    container
    oci
    qcow
    os-release
    virtual-machine
    vm
    rootfs
    scancode


license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.7

install_requires =
    click >= 6.7, !=7.0, !=8.0.3
    attrs >= 18.1, !=20.1.0
    dockerfile_parse
    commoncode >= 30.2.0


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 6.0.0
    black
    twine

docs =
    Sphinx >= 3.3.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1


[options.entry_points]
console_scripts =
    container_inspector=container_inspector.cli:container_inspector
    container_inspector_squash=container_inspector.cli:container_inspector_squash
    container_inspector_dockerfile=container_inspector.cli:container_inspector_dockerfile
